push all remaing inut

--- a/public/index.html
+++ b/public/index.html
@@ -108,34 +108,33 @@
         <h3>Input PNR Data</h3>
         <textarea id="pnrInput" placeholder="Enter PNR data here..."></textarea>
         
-        <!-- === UPDATED FARE OPTIONS SECTION === -->
         <div class="fare-options-grid">
             <div class="fare-group">
                 <label>Adults</label>
                 <div class="count-fare-wrapper">
-                    <div><label for="adultCountInput" class="sr-only">Count</label><input id="adultCountInput" type="number" min="0" value="1" title="Number of Adults"></div>
-                    <div><label for="adultFareInput" class="sr-only">Fare</label><input id="adultFareInput" type="number" step="any" placeholder="Fare" title="Fare per Adult"></div>
+                    <div><input id="adultCountInput" type="number" min="0" value="1" title="Number of Adults"></div>
+                    <div><input id="adultFareInput" type="number" step="any" placeholder="Fare" title="Fare per Adult"></div>
                 </div>
             </div>
             <div class="fare-group">
                 <label>Children</label>
                 <div class="count-fare-wrapper">
-                    <div><label for="childCountInput" class="sr-only">Count</label><input id="childCountInput" type="number" min="0" value="0" title="Number of Children"></div>
-                    <div><label for="childFareInput" class="sr-only">Fare</label><input id="childFareInput" type="number" step="any" placeholder="Fare" title="Fare per Child"></div>
+                    <div><input id="childCountInput" type="number" min="0" value="0" title="Number of Children"></div>
+                    <div><input id="childFareInput" type="number" step="any" placeholder="Fare" title="Fare per Child"></div>
                 </div>
             </div>
             <div class="fare-group">
                 <label>Infants</label>
                 <div class="count-fare-wrapper">
-                    <div><label for="infantCountInput" class="sr-only">Count</label><input id="infantCountInput" type="number" min="0" value="0" title="Number of Infants"></div>
-                    <div><label for="infantFareInput" class="sr-only">Fare</label><input id="infantFareInput" type="number" step="any" placeholder="Fare" title="Fare per Infant"></div>
+                    <div><input id="infantCountInput" type="number" min="0" value="0" title="Number of Infants"></div>
+                    <div><input id="infantFareInput" type="number" step="any" placeholder="Fare" title="Fare per Infant"></div>
                 </div>
             </div>
-            <div class="fare-group">
+            <div class="fare-group" id="taxInputContainer">
                 <label>Taxes (per person)</label>
                 <input id="taxInput" type="number" step="any" placeholder="Taxes">
             </div>
-            <div class="fare-group">
+            <div class="fare-group" id="feeInputContainer">
                 <label>Fees (per person)</label>
                 <input id="feeInput" type="number" step="any" placeholder="Fees">
             </div>
@@ -144,7 +143,6 @@
                 <select id="currencySelect"><option value="USD" selected>USD $</option><option value="EUR">EUR €</option><option value="INR">INR ₹</option></select>
             </div>
         </div>
-        <!-- === END OF UPDATED SECTION === -->
 
         <div class="baggage-options">
           <label>Baggage:</label>
@@ -175,9 +173,8 @@
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="3" y1="12" x2="21" y2="12"></line><line x1="3" y1="6" x2="21" y2="6"></line><line x1="3" y1="18" x2="21" y2="18"></line></svg>
     </button>
 
-    <!-- The rest of the HTML remains the same... -->
     <div class="sidebar">
-      <div class="options">
+        <div class="options">
             <h3>Display Options</h3>
             <label><input type="checkbox" id="showItineraryLogo" checked> Show Main Itinerary Logo</label>
             <div id="customBrandingSection">
@@ -194,7 +191,6 @@ Contact Info"></textarea>
                 <button id="clearCustomBrandingBtn" class="clear-btn">Clear Branding</button>
             </div>
             <hr>
-            <!-- === THIS IS THE CORRECTED, COMPLETE LIST OF CHECKBOXES === -->
             <label><input type="checkbox" id="showAirline" checked> Show Airline</label>
             <label><input type="checkbox" id="showAircraft" checked> Show Aircraft</label>
             <label><input type="checkbox" id="showOperatedBy" checked> Show Operated By</label>
@@ -209,7 +205,6 @@ Contact Info"></textarea>
             <label><input type="checkbox" id="showFees" checked> Show Fees</label>
         </div>
     </div>
-  </div>
   </div>
 
   <div id="historyModal" class="modal-overlay hidden">
