--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
         .baggage-options { margin-top: 20px; display: flex; align-items: center; flex-wrap: wrap; gap: 10px; }
         #allTheWayInputs { display: none; align-items: center; gap: 10px; }
         #allTheWayInputs.visible { display: flex; }
-        #output { width: fit-content; min-width: 300px; max-width: 100%; overflow-x: auto; padding-right: 5px; }
+        #output { width: fit-content; min-width: 300px; max-width: 100%; overflow-x: auto;}
         .output-container { border: 1px solid #e0e0e0; background: white; box-sizing: border-box; }
         .itinerary-main-logo-container { display: flex; justify-content: space-between; align-items: center; padding: 10px 15px; border-bottom: 1px solid #eee; }
         .itinerary-main-logo { max-width: 150px; max-height: 40px; object-fit: contain; }
