--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,18 @@
         .itinerary-header p { margin: 0; font-size: 14px; }
         .flight-item { padding: 15px; border-bottom: 1px dashed #ccc; }
         .flight-item:last-child { border-bottom: none; }
-        .transit-item { font-style: italic; color: #888; text-align: center; padding: 10px 0; background-color: #f9f9f9; }
+        .transit-item { font-style: italic; text-align: center; padding: 8px 0; margin-top: -1px; }
+        /* === NEW CSS CLASSES FOR TRANSIT TIME === */
+        .transit-item.transit-short {
+            color: #e74c3c; /* Red */
+            font-weight: 500;
+        }
+        .transit-item.transit-minimum {
+            color: #27ae60; /* Green */
+        }
+        .transit-item.transit-long {
+            color: #f39c12; /* Orange */
+        }
         .airline-logo { width: 50px; height: 50px; object-fit: contain; border-radius: 5px; }
         .flight-header { font-weight: 600; font-size: 14px; margin-bottom: 10px; }
         .flight-detail { font-size: 13px; color: #34495e; margin-bottom: 5px; }
