--- a/public/index.html
+++ b/public/index.html
@@ -163,7 +163,7 @@
           <input type="radio" id="baggageParticular" name="baggageOption" value="particular"> <label for="baggageParticular">Per segment</label>
           <div id="allTheWayInputs">
               <input id="baggageAmountInput" type="number" min="1" placeholder="e.g., 23" style="width: 60px;">
-              <select id="baggageUnitSelect"><option value="kg">kg</option><option value="pc">pc</option></select>
+              <select id="baggageUnitSelect"><option value="kg">kg</option><option value="pcs">pcs</option></select>
           </div>
         </div>
         <button id="clearBtn">❌ Clear</button>
