--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
         .itinerary-header p { margin: 0; font-size: 14px; }
         .flight-item { padding: 15px; border-bottom: 1px dashed #ccc; }
         .flight-item:last-child { border-bottom: none; }
-        .transit-item { font-style: italic; text-align: center; padding: 8px 0; margin-top: -1px; }
+        .transit-item { font-style: italic; text-align: center; padding: 8px 0; margin-top: -1px; background: white; }
         /* === NEW CSS CLASSES FOR TRANSIT TIME === */
         .transit-item.transit-short {
             color: #e74c3c; /* Red */
