--- a/public/index.html
+++ b/public/index.html
@@ -36,12 +36,12 @@
         #allTheWayInputs.visible { display: flex; }
         #output { width: fit-content; min-width: 300px; max-width: 100%; overflow-x: auto;}
         .output-container { border: 1px solid #e0e0e0; background: white; box-sizing: border-box; }
-        .itinerary-main-logo-container { display: flex; justify-content: space-between; align-items: center; padding: 10px 15px; border-bottom: 1px solid #eee; }
+        .itinerary-main-logo-container { display: flex; justify-content: space-between; align-items: center; padding: 5px 10px; border-bottom: 1px solid #eee; }
         .itinerary-main-logo { max-width: 150px; max-height: 40px; object-fit: contain; }
         .itinerary-logo-text { font-size: 0.8em; color: #555; text-align: right; line-height: 1.3; white-space: pre-line; }
         .itinerary-header { padding: 15px; border-bottom: 1px solid #eee; }
         .itinerary-header p { margin: 0; font-size: 14px; }
-        .flight-item { padding: 15px; border-bottom: 1px dashed #ccc; }
+        .flight-item { padding: 7px 15px 1px 15px; border-bottom: 1px dashed #ccc; }
         .flight-item:last-child { border-bottom: none; }
         .transit-item { font-style: italic; text-align: center; padding: 8px 0; margin-top: -1px; background: white; }
         /* === NEW CSS CLASSES FOR TRANSIT TIME === */
