revert logog update

--- a/public/index.html
+++ b/public/index.html
@@ -199,8 +199,7 @@
         <label><input type="checkbox" id="showTaxes" checked> Show Taxes</label>
         <label><input type="checkbox" id="showFees" checked> Show Fees</label>
         <hr>
-        <label><input type="checkbox" id="showItineraryLogo" checked>Show Logo (default)</label>
-        <label><input type="checkbox" id="showItineraryLogoCustom" checked>Show Main Itinerary Logo</label>
+        <label><input type="checkbox" id="showItineraryLogo" checked>Show Main Itinerary Logo</label>
 
         <div id="customBrandingSection">
           <div class="custom-branding-input">
