--- a/public/index.html
+++ b/public/index.html
@@ -61,7 +61,7 @@
         .flight-detail.notes-detail { white-space: pre-wrap; word-break: break-word; }
         .flight-detail strong { color: #555; margin-right: 5px; }
         .flight-content { display: flex; gap: 15px; align-items: flex-start; }
-        .fare-summary { font-weight: 500; margin: 15px; padding-top: 15px; border-top: 1px solid #e0e0e0; font-size: 14px; white-space: pre-line; }
+        .fare-summary { font-weight: 500; margin: -1px 0px 5px 10px; padding-top: 15px; border-top: 1px solid #e0e0e0; font-size: 14px; white-space: pre-line; }
         .fare-summary strong { font-size: 1.1em; }
         .sidebar h3 { margin-top: 0; }
         .options label { display: block; margin: 10px 0; cursor: pointer; font-size: 15px; }
