--- a/public/index.html
+++ b/public/index.html
@@ -164,8 +164,9 @@
               <select id="baggageUnitSelect"><option value="kg">kg</option><option value="pcs">pcs</option></select>
           </div>
         </div>
-        <button id="clearBtn">❌ Clear</button>
-        <button id="pasteBtn">📋 Paste</button>
+        <button id="convertBtn" class="action-btn primary-btn">Convert PNR</button>
+        <button id="pasteBtn" class="action-btn">Paste</button>
+        <button id="clearBtn" class="action-btn">Clear</button>
         <button id="historyBtn">📜 History</button>
         <div class="loading-spinner" id="loadingSpinner"></div>
       </div>
