--- a/public/index.html
+++ b/public/index.html
@@ -120,21 +120,21 @@
         <!-- === UPDATED FARE OPTIONS SECTION === -->
         <div class="fare-options-grid">
           <div class="fare-group">
-            <label>Adults</label>
+            <label>ADLT</label>
             <div class="count-fare-wrapper">
               <div><input id="adultCountInput" type="text" inputmode="decimal" value="1" title="Number of Adults"></div>
               <div><input id="adultFareInput" type="text" inputmode="decimal" placeholder="Fare" title="Fare per Adult"></div>
             </div>
           </div>
         <div class="fare-group">
-          <label>Children</label>
+          <label>CHLD</label>
           <div class="count-fare-wrapper">
               <div><input id="childCountInput" type="text" inputmode="decimal" value="0" title="Number of Children"></div>
               <div><input id="childFareInput" type="text" inputmode="decimal" placeholder="Fare" title="Fare per Child"></div>
             </div>
           </div>
           <div class="fare-group">
-            <label>Infants</label>
+            <label>INFT</label>
             <div class="count-fare-wrapper">
               <div><input id="infantCountInput" type="text" inputmode="decimal" value="0" title="Number of Infants"></div>
               <div><input id="infantFareInput" type="text" inputmode="decimal" placeholder="Fare" title="Fare per Infant"></div>
