--- a/public/index.html
+++ b/public/index.html
@@ -218,7 +218,7 @@
         .flight-content{
           display:flex;
           gap:15px;
-          align-items:flex-start
+          align-items:center;
         }
         .fare-summary{
           font-weight:500;
