--- a/public/index.html
+++ b/public/index.html
@@ -409,7 +409,7 @@
         <label><input type="checkbox" id="showAirline" checked> Show Airline</label>
         <label><input type="checkbox" id="showAircraft" checked> Show Aircraft</label>
         <label><input type="checkbox" id="showOperatedBy" checked> Show Operated By</label>
-        <label><input type="checkbox" id="showClass"> Show Class</label>
+        <label><input type="checkbox" id="showClass"> Display Cabin</label>
         <label><input type="checkbox" id="showMeal"> Show Meal</label>
         <label><input type="checkbox" id="showNotes"> Show Notes</label>
         <label><input type="checkbox" id="showTransit" checked> Show Transit Times</label>
