--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
         h1 { text-align: center; margin-bottom: 30px; }
         hr { border: 0; border-top: 1px solid var(--border-color); margin: 25px 0; }
         .container { display: flex; gap: 30px; align-items: flex-start; max-width: 1400px; margin: 0 auto; }
-        .main-content { flex: 1; display: flex; flex-direction: column; gap: 30px; min-width: 0; }
+        .main-content { flex: 1; display: flex; flex-direction: column; gap: 30px; min-width: 0; padding-bottom: 500px; }
         
         /* --- "LIVING" INTERFACE: INTERACTIVE CARDS --- */
         .input-area, .output-area, .sidebar { 
