--- a/public/index.html
+++ b/public/index.html
@@ -373,8 +373,8 @@
           <div class="fare-group"><label>ADLT</label><div class="count-fare-wrapper"><div><input id="adultCountInput" type="text" inputmode="decimal" value="1" title="Number of Adults"></div><div><input id="adultFareInput" type="text" inputmode="decimal" placeholder="Fare" title="Fare"></div></div></div>
           <div class="fare-group"><label>CHLD</label><div class="count-fare-wrapper"><div><input id="childCountInput" type="text" inputmode="decimal" value="0" title="Number of Children"></div><div><input id="childFareInput" type="text" inputmode="decimal" placeholder="Fare" title="Fare"></div></div></div>
           <div class="fare-group"><label>INFT</label><div class="count-fare-wrapper"><div><input id="infantCountInput" type="text" inputmode="decimal" value="0" title="Number of Infants"></div><div><input id="infantFareInput" type="text" inputmode="decimal" placeholder="Fare"></div></div></div>
-          <div class="fare-group" id="taxInputContainer"><label>Taxes (per person)</label><input id="taxInput" type="text" inputmode="decimal" placeholder="Taxes"></div>
-          <div class="fare-group" id="feeInputContainer"><label>Fees (per person)</label><input id="feeInput" type="text" inputmode="decimal" placeholder="Fees"></div>
+          <div class="fare-group" id="taxInputContainer"><label>Tax (per person)</label><input id="taxInput" type="text" inputmode="decimal" placeholder="Tax"></div>
+          <div class="fare-group" id="feeInputContainer"><label>Fee (per person)</label><input id="feeInput" type="text" inputmode="decimal" placeholder="Fee"></div>
           <div class="fare-group"><label for="currencySelect">Currency</label><select id="currencySelect"><option value="USD" selected>USD $</option><option value="EUR">EUR €</option><option value="INR">INR ₹</option></select></div>
         </div>
 
