--- a/public/index.html
+++ b/public/index.html
@@ -171,7 +171,7 @@
         #allTheWayInputs.visible { display: flex; }
 
         .output-area .output-actions { display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap; }
-        #output { width: fit-content; min-width: 300px; max-width: 100%; overflow-x: auto; margin-top: 15px; }
+        #output { width: fit-content; min-width: 300px; max-width: 100%; overflow-x: auto; margin: 15px 0 200px 0; }
         #output[contenteditable="true"] {
             border: 2px dashed var(--primary-blue);
             padding: 10px;
