--- a/public/index.html
+++ b/public/index.html
@@ -191,7 +191,7 @@
         .itinerary-header p{margin:0;font-size:14px}
         .flight-item{padding:7px 15px 0px;border-bottom:1px dashed #ccc}
         .flight-item:last-child{border-bottom:none}
-        .transit-item{font-style:italic;text-align:center;padding:8px 0;margin-top:-1px;background:#fff}
+        .transit-item{font-style:italic;text-align:center;padding:8px 0;margin-top:-1px;background:#fff; font-size: 14px;font-weight: bold; }
         .transit-item.transit-short{color:var(--danger-red);font-weight:500}
         .transit-item.transit-minimum{color:#27ae60}
         .transit-item.transit-long{color:#f39c12}
