--- a/public/index.html
+++ b/public/index.html
@@ -259,7 +259,7 @@
         .flight-item{padding:7px 15px 0px;border-bottom:1px dashed #ccc}
         .flight-item:last-child{border-bottom:none}
         .transit-item{font-style:italic;text-align:center;padding:8px 0;margin-top:-1px;background:#fff; font-size: 14px;font-weight: bold; }
-        .transit-item.transit-short{color:var(--danger-red);font-weight:500}
+        .transit-item.transit-short{color:var(--danger-red);}
         .transit-item.transit-minimum{color:#27ae60}
         .transit-item.transit-long{color:#f39c12}
         .airline-logo{width:95px;height:65px;object-fit:contain;border-radius:5px}
