--- a/public/index.html
+++ b/public/index.html
@@ -412,6 +412,11 @@ Contact Info"></textarea>
           </div>
           <button id="clearCustomBrandingBtn" class="clear-btn">Clear Branding</button>
         </div>
+        <h4>Transit Time Format</h4>
+        <div class="time-format-group">
+            <label><input type="radio" id="transitTime12" name="transitTimeFormat" value="12h"> 12-Hour</label>
+            <label><input type="radio" id="transitTime24" name="transitTimeFormat" value="24h" checked> 24-Hour</label>
+        </div>
       </div>
     </div>
   </div>
