--- a/public/index.html
+++ b/public/index.html
@@ -122,6 +122,12 @@
         }
         /* --- END: NEW HEADING STYLES --- */
 
+        .leg-header-icon {
+            width: 24px;
+            height: 24px;
+            margin-left: 10px; /* This puts space to the left of the icon */
+        }
+
         /* --- NEW: TOGGLE SWITCH STYLES --- */
         .toggle-switch {
             display: flex;
