--- a/public/index.html
+++ b/public/index.html
@@ -125,7 +125,7 @@
         .leg-header-icon {
             width: 24px;
             height: 24px;
-            margin-left: 10px; /* This puts space to the left of the icon */
+            margin: 0 0 -6px 10px; /* This puts space to the left of the icon */
         }
 
         /* --- NEW: TOGGLE SWITCH STYLES --- */
