--- a/public/index.html
+++ b/public/index.html
@@ -415,7 +415,7 @@
         <label><input type="checkbox" id="showTransit" checked> Show Transit Times</label>
         <div id="transitSymbolContainer" class="custom-transit-input">
             <label for="transitSymbolInput">Separator:</label>
-            <input type="text" id="transitSymbolInput" placeholder="-----" style="width: 120px; padding: 5px;">
+            <input type="text" id="transitSymbolInput" placeholder=":::::::" style="width: 120px; padding: 5px;">
         </div>
         
         <hr>
