--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PNR Converter</title>
+    <title>PNR Converter SV</title>
     <link rel="shortcut icon" href="pass.png" type="image/x-icon">
     <style>
         :root {
