--- a/public/index.html
+++ b/public/index.html
@@ -335,7 +335,7 @@
                 <button id="historyBtn">📜 History</button>
             </div>
             <label class="toggle-switch" title="If enabled, PNR will be converted automatically after pasting.">
-                <span class="toggle-switch-label">Auto Convert</span>
+                <span class="toggle-switch-label">(When this feature is "ON" only click "Paste" button) Auto Convert</span>
                 <input type="checkbox" id="autoConvertToggle">
                 <span class="switch-body"></span>
             </label>
