removed transit display option

--- a/public/index.html
+++ b/public/index.html
@@ -412,7 +412,7 @@
             <label><input type="radio" id="segmentTime24" name="segmentTimeFormat" value="24h" checked> 24-Hour</label>
         </div>
         
-        <label><input type="checkbox" id="showTransit" checked> Show Transit Times</label>
+        <label style="display: none;"><input type="checkbox" id="showTransit" checked> Show Transit Times</label>
         <div id="transitSymbolContainer" class="custom-transit-input">
             <label for="transitSymbolInput">Separator:</label>
             <input type="text" id="transitSymbolInput" placeholder=":::::::" style="width: 120px; padding: 5px;">
