--- a/public/index.html
+++ b/public/index.html
@@ -992,9 +992,9 @@
 
                 <div class="baggage-options">
                     <label>Baggage:</label>
-                    <input type="radio" id="baggageNone" name="baggageOption" value="none" checked> <label
+                    <input type="radio" id="baggageNone" name="baggageOption" value="none"> <label
                         for="baggageNone">None</label>
-                    <input type="radio" id="baggageParticular" name="baggageOption" value="particular"> <label
+                    <input type="radio" id="baggageParticular" name="baggageOption" value="particular" checked> <label
                         for="baggageParticular">Per segment</label>
                     <!-- The Refactored Toggle Switch HTML -->
                     <input id="baggageAmountInput" type="number" min="1" value="23" style="width: 35px; height: 20px;">
