--- a/public/index.html
+++ b/public/index.html
@@ -991,13 +991,11 @@
                 </div>
 
                 <div class="baggage-options">
-                    <div style="display: none;">
-                        <label>Baggage:</label>
-                        <input type="radio" id="baggageNone" name="baggageOption" value="none"> <label
-                            for="baggageNone">None</label>
-                    </div>
-                    <input type="radio" id="baggageParticular"  value="particular" checked style="display: none;"> <label
-                        for="baggageParticular"> <strong>Baggage:</strong> Per segment</label>
+                    <label>Baggage:</label>
+                    <input type="radio" id="baggageNone" name="baggageOption" value="none"> <label
+                        for="baggageNone">None</label>
+                    <input type="radio" id="baggageParticular" name="baggageOption" value="particular" checked> <label
+                        for="baggageParticular">Per segment</label>
                     <!-- The Refactored Toggle Switch HTML -->
                     <input id="baggageAmountInput" type="number" min="1" value="23" style="width: 35px; height: 20px;">
 
