--- a/public/index.html
+++ b/public/index.html
@@ -298,8 +298,8 @@ Contact Info"></textarea>
             const comboboxContainer = document.getElementById('baggageCombobox');
 
             if (unitToggle && baggageInput && baggageDropdown && comboboxContainer) {
-                const kgOptions = [null, '15', '23', '40'];
-                const pcOptions = [null, '1', '2', '3'];
+                const kgOptions = [null, null, '15', '23', '40'];
+                const pcOptions = [null, null, '1', '2', '3'];
 
                 // This function simulates a manual input event.
                 // It's the key to making the dropdown selection trigger the auto-converter.
