--- a/public/index.html
+++ b/public/index.html
@@ -92,7 +92,7 @@
                 </div>
 
                 <div class="fare-options-grid">
-                    <div class="fare-group"><label>ADLT</label>
+                    <div class="fare-group"><label>ADT</label>
                         <div class="count-fare-wrapper">
                             <div><input id="adultCountInput" type="text" inputmode="decimal" value="1"
                                     title="Number of Adults"></div>
@@ -100,7 +100,7 @@
                                     title="Fare"></div>
                         </div>
                     </div>
-                    <div class="fare-group"><label>CHLD</label>
+                    <div class="fare-group"><label>CHD</label>
                         <div class="count-fare-wrapper">
                             <div><input id="childCountInput" type="text" inputmode="decimal" value="0"
                                     title="Number of Children">
@@ -109,7 +109,7 @@
                                     title="Fare"></div>
                         </div>
                     </div>
-                    <div class="fare-group"><label>INFT</label>
+                    <div class="fare-group"><label>INF</label>
                         <div class="count-fare-wrapper">
                             <div><input id="infantCountInput" type="text" inputmode="decimal" value="0"
                                     title="Number of Infants">
