--- a/public/index.html
+++ b/public/index.html
@@ -405,6 +405,10 @@ Contact Info"></textarea>
         setInterval(checkVersion, 5000);
         checkVersion();
     </script>
+    <script>
+        window.si = window.si || function () { (window.siq = window.siq || []).push(arguments); };
+    </script>
+    <script defer src="/_vercel/speed-insights/script.js"></script>
 </body>
 
 </html>
